--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>Paper scientific</title>
 </head>
 <body>
-    
+
+    <!-- Header -->
+    <header>
+        <h1>Incremental and Decremental Support Vector Machine Learning</h1>
+        <hr>
+    </header>
+    <!-- /Header -->
+
+
+    <!-- Main -->
+    <main></main>
+    <!-- /Main -->
+
+
+    <!-- Footer -->
+    <footer></footer>
+    <!-- Footer -->
 </body>
 </html>
