--- a/index.html
+++ b/index.html
@@ -17,12 +17,40 @@
 
 
     <!-- Main -->
-    <main></main>
-    <!-- /Main -->
+    <main>
 
+        <!-- <h3>Gert Cauwenberghs</h3>
+        <p>
+            Indirizzo,
+            <br>
+            università,
+            <br>
+            Baltimor, MD,
+            <br>
+            <em>gert@jhu.edu</em>
+        </p> -->
+
+        <p>
+            <strong>Gert Cauwenberghs</strong>
+            <br>
+            Indirizzo,
+            <br>
+            università,
+            <br>
+            Baltimor, MD,
+            <br>
+            <em>gert@jhu.edu</em>
+        </p>
+
+
+
+    </main>
+    <!-- /Main -->
 
     <!-- Footer -->
     <footer></footer>
     <!-- Footer -->
+
+
 </body>
 </html>
