--- a/index.html
+++ b/index.html
@@ -30,19 +30,39 @@
             <em>gert@jhu.edu</em>
         </p> -->
 
-        <p>
-            <strong>Gert Cauwenberghs</strong>
-            <br>
-            Indirizzo,
-            <br>
-            università,
-            <br>
-            Baltimor, MD,
-            <br>
-            <em>gert@jhu.edu</em>
-        </p>
+        <!-- Autore -->
+        <div>
+            <p>
+                <strong>Gert Cauwenberghs</strong>
+                <br>
+                Indirizzo,
+                <br>
+                università,
+                <br>
+                Baltimor, MD,
+                <br>
+                <em>gert@jhu.edu</em>
+            </p>
+        </div>
+        <!-- /Autore -->
 
+        <!-- Testo principale -->
+        <div>
+            <h2>Abstract</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis vero neque sequi qui. Aliquid facilis facere dicta praesentium repellat eos cum consequuntur ex repudiandae illum atque, provident eum ut aperiam?</p>
 
+            <ol>
+                <li>
+                    <h4>Introduction</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis mollitia quaerat eum, animi earum doloribus sunt, omnis dolorem impedit assumenda laborum est illum rerum? Animi hic iusto autem aperiam culpa.</p>
+                    <!-- <img src="https://media.nature.com/lw800/magazine-assets/d41586-019-03305-w/d41586-019-03305-w_17345528.png" alt=""> -->
+                    <img src="img/monti-300.jpg" alt="">
+                    <img src="img/monti-300.jpg" alt="">
+                    <img src="img/monti-400.jpg" alt="">
+                </li>
+            </ol>
+        </div>
+        <!-- /Testo principale -->
 
     </main>
     <!-- /Main -->
