--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
     <!-- /Main -->
 
     <!-- Footer -->
-    <footer></footer>
+    <footer>
+        <a href="https://wikipedia.org">Wikipedia</a>
+    </footer>
     <!-- Footer -->
 
 
