--- a/index.html
+++ b/index.html
@@ -51,16 +51,54 @@
             <h2>Abstract</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis vero neque sequi qui. Aliquid facilis facere dicta praesentium repellat eos cum consequuntur ex repudiandae illum atque, provident eum ut aperiam?</p>
 
+            <p>Questo paper scientifico usa tag &lt;table&gt;</p>
+
+            <!-- Tabella dei paesi del mondo -->
+            <table>
+                <thead>
+                    <tr>
+                        <th>Country</th>
+                        <th>Area</th>
+                        <th>Population</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>Italia</td>
+                        <td>300 000 km2 </td>
+                        <td>60 mln</td>
+                    </tr>
+                    <tr>
+                        <td>Francia</td>
+                        <td>400 000 km2 </td>
+                        <td>80 mln</td>
+                    </tr>
+                </tbody>
+
+                <tfoot>
+                    <tr>
+                        <td>Totale popolazione</td>
+                        <td></td>
+                        <td>140 mln</td>
+                    </tr>
+                </tfoot>
+
+            </table>
+            <!-- /Tabella dei paesi del mondo -->
+
+            <!-- Lista dei capitoli -->
             <ol>
                 <li>
                     <h4>Introduction</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis mollitia quaerat eum, animi earum doloribus sunt, omnis dolorem impedit assumenda laborum est illum rerum? Animi hic iusto autem aperiam culpa.</p>
                     <!-- <img src="https://media.nature.com/lw800/magazine-assets/d41586-019-03305-w/d41586-019-03305-w_17345528.png" alt=""> -->
-                    <img src="img/monti-300.jpg" alt="">
+                    <img src="img/monti-300.jpg" alt="Le montagne in Sicilia d'inverno">
                     <img src="img/monti-300.jpg" alt="">
                     <img src="img/monti-400.jpg" alt="">
                 </li>
             </ol>
+            <!-- /Lista dei capitoli -->
         </div>
         <!-- /Testo principale -->
 
